--- a/src/MessageBoard/Views/Home/Index.cshtml
+++ b/src/MessageBoard/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>Current Post</title>
+    <title>Home</title>
 </head>
 <body>
     <h4>@Html.DisplayNameFor(model => model.Author)</h4>
