change post model.  Author to Title.

--- a/src/MessageBoard/Views/Posts/Create.cshtml
+++ b/src/MessageBoard/Views/Posts/Create.cshtml
@@ -13,8 +13,8 @@
         <h4>Add a new post:</h4>
         @using (Html.BeginForm())
         {
-            @Html.LabelFor(model => model.Author)
-            @Html.TextBoxFor(model => model.Author)
+            @Html.LabelFor(model => model.Title)
+            @Html.TextBoxFor(model => model.Title)
             @Html.LabelFor(model => model.Message)
             @Html.TextBoxFor(model => model.Message)
             <input type="submit" value="Add new post" />
