--- a/src/MessageBoard/Views/Posts/Delete.cshtml
+++ b/src/MessageBoard/Views/Posts/Delete.cshtml
@@ -8,7 +8,7 @@
 
     <h2>Are you sure you want to delete this?</h2>
     <hr />
-    @Html.DisplayNameFor(model => model.Author): @Html.DisplayFor(model => model.Author)
+    @Html.DisplayNameFor(model => model.Title): @Html.DisplayFor(model => model.Title)
     @Html.DisplayNameFor(model => model.Message): @Html.DisplayFor(model => model.Message)
     @using (Html.BeginForm())
     {
