--- a/src/MessageBoard/Views/Posts/Details.cshtml
+++ b/src/MessageBoard/Views/Posts/Details.cshtml
@@ -7,6 +7,7 @@
 <body>
     <h2>Details</h2>
     <hr />
+    @Html.DisplayNameFor(model => model.Title): @Html.DisplayFor(model => model.Title)
     @Html.DisplayNameFor(model => model.Message): @Html.DisplayFor(model => model.Message)
     <p>@Html.ActionLink("Back to post", "Index")</p>
 </body>
