--- a/src/MessageBoard/Views/Posts/Index.cshtml
+++ b/src/MessageBoard/Views/Posts/Index.cshtml
@@ -5,14 +5,13 @@
 @model IEnumerable<MessageBoard.Models.Post>
 
 
-<h2>To Do List</h2>
+<h2>Feel good success stories:</h2>
 <hr />
-<h4>@Html.DisplayNameFor(model => model.Author)</h4>
-<h4>@Html.DisplayNameFor(model => model.Message)</h4>
+
 <ul>
     @foreach (var listItem in Model)
     {
-        <li>@Html.DisplayFor(modelItem => listItem.Author) | @Html.ActionLink("Details", "Details", new { id = listItem.PostId }) | @Html.ActionLink("Edit", "Edit", new { id = listItem.PostId }) | @Html.ActionLink("Delete", "Delete", new { id = listItem.PostId })</li>
+        <li>@Html.DisplayFor(modelItem => listItem.Title) | @Html.ActionLink("Details", "Details", new { id = listItem.PostId }) | @Html.ActionLink("Edit", "Edit", new { id = listItem.PostId }) | @Html.ActionLink("Delete", "Delete", new { id = listItem.PostId })</li>
     }
 </ul>
 <p>@Html.ActionLink("Add new item", "Create")</p>
