--- a/src/MessageBoard/Views/Posts/Edit.cshtml
+++ b/src/MessageBoard/Views/Posts/Edit.cshtml
@@ -1,4 +1,8 @@
 ﻿@model MessageBoard.Models.Post
+@{
+    ViewData["Title"] = "Message Board";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
 <html>
 <head>
