--- a/src/MessageBoard/Views/Posts/Index.cshtml
+++ b/src/MessageBoard/Views/Posts/Index.cshtml
@@ -1,8 +1,9 @@
-﻿@{
-    ViewData["Title"] = "Posts - Create";
+﻿
+@model IEnumerable<MessageBoard.Models.Post>
+@{
+    ViewData["Title"] = "Message Board";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@model IEnumerable<MessageBoard.Models.Post>
 
 
 <h2>Feel good success stories:</h2>
@@ -11,7 +12,8 @@
 <ul>
     @foreach (var listItem in Model)
     {
-        <li>@Html.DisplayFor(modelItem => listItem.Title) | @Html.ActionLink("Details", "Details", new { id = listItem.PostId }) | @Html.ActionLink("Edit", "Edit", new { id = listItem.PostId }) | @Html.ActionLink("Delete", "Delete", new { id = listItem.PostId })</li>
+        <li>@Html.DisplayFor(modelItem => listItem.Title) | @Html.DisplayFor(modelItem => listItem.Comments)| @Html.ActionLink("Details", "Details", new { id = listItem.PostId }) | @Html.ActionLink("Edit", "Edit", new { id = listItem.PostId }) | @Html.ActionLink("Delete", "Delete", new { id = listItem.PostId })</li>
     }
 </ul>
 <p>@Html.ActionLink("Add new item", "Create")</p>
+
