--- a/src/MessageBoard/Views/Shared/_Layout.cshtml
+++ b/src/MessageBoard/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Science</a></li>
-                    <li><a href="/posts">See Others Drops</a></li>
+                    <li><a href="/posts">Message Board</a></li>
                  </ul>   
                   
             </div><!-- /.navbar-collapse -->
