--- a/src/MessageBoard/Views/Posts/Delete.cshtml
+++ b/src/MessageBoard/Views/Posts/Delete.cshtml
@@ -10,14 +10,20 @@
 </head>
 <body>
 
-    <h2>Are you sure you want to delete this?</h2>
+    <h2 class="cool">Are you sure you want to delete this?</h2>
     <hr />
-    @Html.DisplayNameFor(model => model.Title): @Html.DisplayFor(model => model.Title)
-    @Html.DisplayNameFor(model => model.Message): @Html.DisplayFor(model => model.Message)
+    <div class="cool">
+        @Html.DisplayNameFor(model => model.Title): @Html.DisplayFor(model => model.Title)
+        @Html.DisplayNameFor(model => model.Message): @Html.DisplayFor(model => model.Message)
+    </div>
     @using (Html.BeginForm())
+
+
     {
-        <input type="submit" value="Delete" />
+
+    <input type="submit" value="Delete" />
     }
+
     @Html.ActionLink("Back to List", "Index")
 </body>
 </html>
