--- a/src/MessageBoard/Views/Posts/Details.cshtml
+++ b/src/MessageBoard/Views/Posts/Details.cshtml
@@ -1,22 +1,31 @@
 ﻿
-@model MessageBoard.Models.Post
-@{
+@model MessageBoard.ViewModels.PostsViewModel
+@{ 
     ViewData["Title"] = "Message Board";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-
 
 <html>
 <head>
     <title>Post - Details</title>
 </head>
 <body>
-    <h2>Details</h2>
+    <h2 class="cool">Details</h2>
     <hr />
-    @Html.DisplayNameFor(model => model.Title): @Html.DisplayFor(model => model.Title)
-    @Html.DisplayNameFor(model => model.Message): @Html.DisplayFor(model => model.Message)
    
+    @Html.DisplayNameFor(model => model.Posts.Title): @Html.DisplayFor(model => model.Posts.Title)
+    @Html.DisplayNameFor(model => model.Posts.Message): @Html.DisplayFor(model => model.Posts.Message)
+   
+   
+    @foreach (var listComment in Model.Comments)
+    {
+        <li>@Html.DisplayFor(modelComment => listComment.Response)</li>
+    }
+
+
+   
+   
+
 
 
  <p>@Html.ActionLink("Back to post", "Index")</p>
