--- a/src/MessageBoard/Views/Posts/Edit.cshtml
+++ b/src/MessageBoard/Views/Posts/Edit.cshtml
@@ -9,21 +9,28 @@
     <title>Post - Edit</title>
 </head>
 <body>
-    <h2>Edit</h2>
+    <h2 class="cool">Edit</h2>
     <hr />
-    <h4>Edit this task: @Html.DisplayFor(model => model.Title)</h4>
+    <h4 class="cool">Edit this post: @Html.DisplayFor(model => model.Title)</h4>
 
     @using (Html.BeginForm())
     {
-        @Html.HiddenFor(model => model.PostId)
-
-        @Html.LabelFor(model => model.Title)
-        @Html.EditorFor(model => model.Title)
-        @Html.LabelFor(model => model.Message)
-        @Html.EditorFor(model => model.Message)
-        <input type="submit" value="Save" />
-    }
-    <p>@Html.ActionLink("Back to list", "Index")</p>
+        <div class="form-group">
+            @Html.HiddenFor(model => model.PostId)
+        <div class="cool">  
+            @Html.LabelFor(model => model.Title)
+        </div>
+            @Html.EditorFor(model => model.Title)
+          </div>
+          <div class="form-group">
+              <div class="cool">
+                  @Html.LabelFor(model => model.Message)
+              </div>
+                  @Html.EditorFor(model => model.Message)
+                  <input type="submit" value="Save" />
+              </div>
+                }
+                <p>@Html.ActionLink("Back to list", "Index")</p>
 
 </body>
 </html>
