--- a/src/MessageBoard/Views/Posts/Index.cshtml
+++ b/src/MessageBoard/Views/Posts/Index.cshtml
@@ -6,14 +6,14 @@
 }
 
 
-<h2>Feel good success stories:</h2>
+<h2 class="cool">Feel good success stories:</h2>
 <hr />
 
 <ul>
     @foreach (var listItem in Model)
     {
-        <li>@Html.DisplayFor(modelItem => listItem.Title) | @Html.DisplayFor(modelItem => listItem.Comments)| @Html.ActionLink("Details", "Details", new { id = listItem.PostId }) | @Html.ActionLink("Edit", "Edit", new { id = listItem.PostId }) | @Html.ActionLink("Delete", "Delete", new { id = listItem.PostId })</li>
+        <li>Title: @Html.DisplayFor(modelItem => listItem.Title)<br />Post:@Html.DisplayFor(modelItem => listItem.Message) @Html.DisplayFor(modelItem => listItem.Comments) <br />| @Html.ActionLink("Details", "Details", new { id = listItem.PostId }) | @Html.ActionLink("Edit", "Edit", new { id = listItem.PostId }) | @Html.ActionLink("Delete", "Delete", new { id = listItem.PostId })
+    </li>
     }
 </ul>
 <p>@Html.ActionLink("Add new item", "Create")</p>
-
