--- a/src/MessageBoard/Views/Posts/Create.cshtml
+++ b/src/MessageBoard/Views/Posts/Create.cshtml
@@ -17,14 +17,16 @@
             <div class="cool">
                 @Html.LabelFor(model => model.Title)
             </div>
-                @Html.TextBoxFor(model => model.Title, new { @class = "form-control" })
+                @Html.EditorFor(model => model.Title, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Title)
             </div>
            
                 <div class="form-group">
                     <div class="cool">
                         @Html.LabelFor(model => model.Message)
                     </div>
-                    @Html.TextBoxFor(model => model.Message, new { @class = "form-control" })
+                    @Html.EditorFor(model => model.Message, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Message)
                     <br />
                     <br />
                     <input type="submit" value="Add new post" />
