--- a/src/MessageBoard/Views/Posts/Index.cshtml
+++ b/src/MessageBoard/Views/Posts/Index.cshtml
@@ -13,7 +13,7 @@
     @foreach (var listItem in Model)
     {
         <li>
-            Title: @Html.DisplayFor(modelItem => listItem.Title)<br />Post:@Html.DisplayFor(modelItem => listItem.Message) @Html.DisplayFor(modelItem => listItem.Comments) <br />| @Html.ActionLink("Details", "Details", new { id = listItem.PostId }) | @Html.ActionLink("Edit", "Edit", new { id = listItem.PostId }) | @Html.ActionLink("Delete", "Delete", new { id = listItem.PostId })
+            Title: @Html.DisplayFor(modelItem => listItem.Title)<br />Post:@Html.DisplayFor(modelItem => listItem.Message) @Html.DisplayFor(modelItem => listItem.Comments) <br />| @Html.ActionLink("Details", "Details", new { id = listItem.PostId }) | @Html.ActionLink("Edit", "Edit", new { id = listItem.PostId }) | @Html.ActionLink("Delete", "Delete", new { id = listItem.PostId }) | @Html.ActionLink("Reply", "Create", "Comments", new {id = listItem.PostId}, null)
         </li>
     }
 </ul>
