Navigation with authentication works.  Styling needs work.

--- a/src/MessageBoard/Views/Home/Index.cshtml
+++ b/src/MessageBoard/Views/Home/Index.cshtml
@@ -1,6 +1,11 @@
 ﻿@{
-    ViewData["Title"] = "Message Board";
+    ViewData["Title"] = "Index";
+   
 }
+
+@using System.Security.Claims
 
 
 <h1>Welcome to Pay it forward!!</h1>
+
+
