--- a/src/MessageBoard/Views/Account/Register.cshtml
+++ b/src/MessageBoard/Views/Account/Register.cshtml
@@ -1,24 +1,29 @@
 ﻿@{
     ViewData["Title"] = "Register";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
 
 @using MessageBoard.ViewModels
 
 @model RegisterViewModel
-
-<h2>Register a new user</h2>
-<hr />
+<div class="cool2">
+    <h2>Register a new user</h2>
+    <hr />
+</div>
 @using (Html.BeginForm("Register", "Account", FormMethod.Post))
 {
-    @Html.LabelFor(m => m.Email)
-    @Html.TextBoxFor(m => m.Email)
+    <div class="cool2">
+        @Html.LabelFor(m => m.Email)
+    </div>
+            @Html.TextBoxFor(m => m.Email)
+            <div class="cool2">
+                @Html.LabelFor(m => m.PassWord)
+            </div>
+            @Html.PasswordFor(m => m.PassWord)
+            <div class="cool2">
+                @Html.LabelFor(m => m.ConfirmPassword)
+            </div>
+            @Html.PasswordFor(m => m.ConfirmPassword)
 
-    @Html.LabelFor(m => m.PassWord)
-    @Html.PasswordFor(m => m.PassWord)
-
-    @Html.LabelFor(m => m.ConfirmPassword)
-    @Html.PasswordFor(m => m.ConfirmPassword)
-
-    <input type="submit" value="Register" />
+            <input type="submit" value="Register" />
 }
