--- a/src/MessageBoard/Views/Home/Index.cshtml
+++ b/src/MessageBoard/Views/Home/Index.cshtml
@@ -1,11 +1,22 @@
-﻿@{
-    ViewData["Title"] = "Index";
-   
+﻿@{ 
+    Layout = null;
 }
 
-@using System.Security.Claims
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/StyleSheet.css" />
+
+</head>
+<body>
 
 
-<h1>Welcome to Pay it forward!!</h1>
+<div class="start">
 
-
+    <h1>Wanna save the world like your favorite heroes from the movies??</h1>
+    <h2>Let me help you discover your very real super power that can change the world.</h2>
+    <h3><a class="ghost-button-full-color" href="~/Deeds/index">Click here</a></h3>
+</div>
+</body>
+</html> 
