--- a/src/MessageBoard/Views/Shared/_Layout.cshtml
+++ b/src/MessageBoard/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="~/StyleSheet.css" />
+    <script src="http://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar navbar-default navbar-custom">
@@ -26,6 +27,7 @@
 
                 <ul class="nav navbar-nav navbar-right navbar-custom">
                     <li><a href="#">Science</a></li>
+                    <li><a href="#">Faith</a></li>
                     <li><a href="/posts">Message Board</a></li>
                     <li>
                         @if (User.Identity.IsAuthenticated)
