added jquery, amd JavaScript files to add interactivity to app.

--- a/src/MessageBoard/Views/Deeds/Index.cshtml
+++ b/src/MessageBoard/Views/Deeds/Index.cshtml
@@ -1,14 +1,27 @@
 ﻿@{
-    ViewData["Title"] = "Item - Create";
+    ViewData["Index"] = "Deed - index";
 
 }
 
 
-<h2>Your Hidden Superpower is.......</h2>
+
+
+<div class="hidden1">
+    <h2>Your Hidden Superpower is.......</h2>
+</div>
+
+<div class="hidden2">
+    <h1>KINDNESS</h1>
+</div>
+
+<div class="hidden3">
+    <h2>I can here you say: "Your kidding right?"</h2>
+</div>
+
+<div class="hidden4">
+    <h2>Lets talk about how your kindness can change the world:</h2>
+</div>
 
 
 
-
-
-
-<h1>KINDNESS</h1>
+    
