--- a/src/MessageBoard/wwwroot/StyleSheet.css
+++ b/src/MessageBoard/wwwroot/StyleSheet.css
@@ -106,3 +106,23 @@ li {
     background-size: cover;
     color: white;
 }
+
+.hidden1
+{
+    display: none;
+}
+
+.hidden2
+{
+    display: none;
+}
+
+.hidden3
+{
+    display: none;
+}
+.hidden4
+{
+    display: none;
+}
+
