attempting to revise db.  reintergrate this branch to master before db change/addition.

--- a/src/MessageBoard/Views/Deeds/Index.cshtml
+++ b/src/MessageBoard/Views/Deeds/Index.cshtml
@@ -7,7 +7,7 @@
 
 
 <div class="hidden1">
-    <h2>Your Hidden Superpower is.......</h2>
+    <h1>Your Hidden Superpower is.......</h1>
 </div>
 
 <div class="hidden2">
@@ -19,9 +19,13 @@
 </div>
 
 <div class="hidden4">
-    <h2>Lets talk about how your kindness can change the world:</h2>
+    <h1>Lets talk about how your kindness can change the world!</h1>
 </div>
 
+
+<div class="hidden5">
+    
+</div>
 
 
     
