added hangfire server, and dashboard.  Ended up using JavaScript/Ajax for the timed random pull call.  Less buggy.  It works!!!

--- a/src/MessageBoard/Views/Deeds/Index.cshtml
+++ b/src/MessageBoard/Views/Deeds/Index.cshtml
@@ -2,13 +2,15 @@
     ViewData["Index"] = "Deed - index";
 
 }
+@using MessageBoard.Controllers;
+
 
 <script type="text/javascript">
 
     $(document).ready(function () {
-        $('.display-random-database-item').submit(function (event) {
-            event.preventDefault();
-            alert("Test");
+        setInterval(function () {
+            
+            
             $.ajax({
 
                 url: '@Url.Action("RandomDeedSelector")',
@@ -22,10 +24,10 @@
                     }
                     stringResult += '</ul>';
                     $('#result1').html(stringResult);
-                    alert("Test");
+                    
                 }
             });
-        });
+        }, 30000);
 
     });
 </script>
@@ -50,15 +52,17 @@
 
 
 <div class="hidden5">
-    <h2>Using a form to make a GET request for a random deed.</h2>
-    <form action="RandomDeedSelector" class="display-random-database-item">
-        <button type="submit">Submit</button>
-    </form>
-    <div id="result1">
+    <h2>Using Ajax to make a GET request for a random deed.</h2>
+    <div id="result1"> </div>
+
+    <div>
+       
+
+       
 
 
     </div>
-    ...
+    
 
 </div>
 
