--- a/src/MessageBoard/Views/Account/Login.cshtml
+++ b/src/MessageBoard/Views/Account/Login.cshtml
@@ -14,10 +14,12 @@
         @Html.LabelFor(m => m.Email)
     </div>
     @Html.TextBoxFor(m => m.Email)
+    @Html.ValidationMessageFor(m => m.Email)
     <div class="cool2">
         @Html.LabelFor(m => m.Password)
     </div>
     @Html.PasswordFor(m => m.Password)
+    @Html.ValidationMessageFor(m => m.Password)
 
     <input type="submit" value="Log in" class="btn btn-default" />
 }
