login corrected.  Returns validation summary, instead of error page.

--- a/src/MessageBoard/Views/Account/Login.cshtml
+++ b/src/MessageBoard/Views/Account/Login.cshtml
@@ -5,6 +5,8 @@
 @using MessageBoard.ViewModels
 
 @model LoginViewModel
+
+<div>@Html.ValidationSummary()</div>
 <div class="cool2">
     <h2>Log in with your account</h2>
     <hr />
