--- a/src/MessageBoard/wwwroot/StyleSheet.css
+++ b/src/MessageBoard/wwwroot/StyleSheet.css
@@ -1,8 +1,11 @@
-﻿body {
+﻿
+body {
     background-image: url("https://j.gifs.com/jR1XWl.gif");
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+
 
 h1 {
     color: white;
